card content alignment problem fix

--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ body {
     flex: 1;
     background-color: rgb(51, 11, 41);
     width: 50%;
-    max-height: 250px;
+    /* max-height: 250px; */
     border-radius: 5px 0px 0px 5px;
 }
 
